# rust-actix-cucumbers-jwt

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.env/: api_dev.env  api_test.env  mongodb_dev.env
api/: Cargo.toml  Dockerfile
api/src/: main.rs
api/src/config/: state.rs
api/src/payload/: bot_requests.rs  mod.rs
api/src/routes/: auth_routes.rs  mod.rs  players_route.rs
api/src/security/: auth_guard.rs  bot_credentials.rs  jwt.rs  mod.rs
artemis-api/: Cargo.toml  Dockerfile
artemis-api/src/: main.rs
artemis-api/src/payload/: token_response.rs
artemis-api/src/routes/: players_route.rs
artemis-cucumbers/: Cargo.toml
artemis-cucumbers/tests/: player_userstory.rs
artemis-cucumbers/tests/features/: player.feature
artemis-lib/: Cargo.toml
artemis-lib/src/models/: bot.rs
artemis-lib/src/repository/: mod.rs
bot/src/events/: events.rs
bot/src/events/commands/: get_id_fgo.rs  mod.rs  register_id_fgo.rs
bot/src/requests/: api_client.rs
cucumbers/: Cargo.toml
cucumbers/tests/: player_userstory.rs
cucumbers/tests/features/: player.feature
env_config/: api_prod.env  mongoexpress_dev.env
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/models/: bot.rs  mod.rs  player.rs  server.rs
lib/src/repository/: bot_repository.rs  database_manager.rs  mod.rs  player_repository.rs
lib/src/security/: jwt.rs
src/: main.rs
src/models/: api_role.rs  mod.rs  player.rs
src/payload/: mod.rs  player_request.rs  token_response.rs
src/repository/: database_manager.rs  mod.rs  player_repository.rs
src/routes/: mod.rs  players_route.rs
tests/: player_userstory.rs
tests/features/: player.feature
