[package]
name = "artemis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.3.0", features = ["bson-uuid-0_8"] }
dotenv = "0.15.0"
async-trait = "0.1.56"
futures = "0.3.21"