[package]
name = "artemis-cucumbers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
async-trait = "0.1"
cucumber = { version = "0.13", features = ["macros", "timestamps"] }
tokio = { version = "1.10", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
artemis-lib = { path = "../artemis-lib" }
mongodb = { version = "2.3.0", features = ["bson-uuid-0_8"] }
assert-str = "0.1.0"

[[test]]
name = "player_userstory"
harness = false  # allows Cucumber to print output instead of libtest

